# workflow

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  build.yml  compose.v2.yml  compose.v3.yml  compose.worker.yml  compose.yaml  compose.yml  deep-interview-spec-porting-datalake-to-workflow.md  package.json  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: cd.yml  ci.yml
config/: setup.sh
config/airflow/: airflow.cfg  openlineage.yml
config/hadoop/: core-site.xml  hadoop-env.sh  yarn-site.xml
config/spark/: spark-defaults.conf
connections/: backup.sh  connections.json
dags/: README.md  example_dag.py
dags/configs/: glue_iceberg_maintenance.yml  glue_kafka_to_iceberg.yml  glue_kafka_to_s3.yml  glue_mysql_to_iceberg.yml  glue_schema_validate.yml  glue_sqlserver_to_iceberg.yml  glue_sqlserver_to_parquet.yml  glue_watermark_maintenance.yml
dags/dbt/: store_mart.py
dags/glue/: glue_kafka_to_iceberg_dag.py  glue_mysql_to_iceberg_dag.py
dags/lineage/: lineage_airflow_to_spark_dag.py
dags/polaris/: polaris_kafka_to_iceberg_dag.py  polaris_mysql_to_iceberg_dag.py
dags/spark/: glue_iceberg_maintenance.py  glue_kafka_to_iceberg.py  glue_kafka_to_s3.py  glue_mssql_to_parquet.py  glue_mysql_to_iceberg.py  glue_mysql_to_parquet.py  glue_parquet_to_iceberg.py  glue_schema_validate.py  glue_sqlserver_to_iceberg.py  glue_watermark_maintenance.py  polaris_kafka_to_iceberg.py
dependency/: connections.json  variables.json
docker/: Dockerfile  README.md  requirements.txt  requirements.txt.my
docker/download/: download.sh
docker/reference/airflow-2.11.2/: airflow.cfg  docker-compose.yaml
docker/reference/airflow-3.1.8/: airflow.cfg  docker-compose.yaml
docs/: gitflow.md  wily.md
download/: download.sh
fixtures/: backup_conn.sh  backup_vars.sh  connections.json  restore_conn.sh  restore_vars.sh  variables.json
plugins/: CustomSparkSubmitOperator.py  README.md  database.py  slack_notifier.py
plugins/alerts/: abstract_notifier.py  slack_notifier.py
plugins/operators/: custom_spark.py  dbt_compile.py  secure_spark.py
scripts/: setup.sh  smart-commit-hook.sh  validate_commit.py
src/: README.md  example_script.py  glue_kafka_to_iceberg_batch.py  glue_mysql_to_iceberg.py  iceberg_maintenance.py  kafka_to_iceberg.py  kafka_to_s3.py  mssql_to_parquet.py  mysql_to_iceberg.py  mysql_to_parquet.py  parquet_to_iceberg.py  polaris_kafka_to_iceberg_batch.py  polaris_mysql_to_iceberg.py  schema_validate.py  sqlserver_to_iceberg.py  watermark_maintenance.py  zip.sh
src/utils/: _database.py  database.py  listener.py  logging.py  settings.py  signal.py  spark_logging.py
tests/: 00.session.ipynb  mysql.env  sqlserver.env  test_database_methods.py  test_type_mapping.py
variables/: restore.sh  variables.json
