[project]
name = "__PROJECT_NAME__"                  # 패키지 이름
version = "__PROJECT_VERSION__"              # 패키지 버전
description = "__PROJECT_DESCRIPTION__"                # 패키지 설명
readme = "README.md"           # README 파일 경로 (선택 사항)
requires-python = ">=3.11"      # Python 버전 요구 사항
license = { file = "LICENSE" } # 라이센스 파일 경로 (선택 사항)

dependencies = [
]

[build-system]
requires = ["setuptools"]  # 패키지를 빌드하는 데 필요한 의존성
build-backend = "setuptools.build_meta"  # 빌드 백엔드

[tool.setuptools]
packages = { find = { where = ["src"] } }
zip-safe = false                   # zip_safe 플래그
include-package-data = true        # 패키지 데이터 포함 설정

[tool.setuptools.package-data]
"base" = ["*.yaml"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
